--- a/src/reusableComponents/litHeader/LitHeader.css
+++ b/src/reusableComponents/litHeader/LitHeader.css
@@ -10,6 +10,7 @@
     align-items: center;
     height: 3.5em;
     box-sizing: border-box;
+    z-index: 1;
     background-color: var(--lsm-background-color);
 }
 
